[package]
name = "cookies"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64-url = "1.4.10"
fasthash = "0.4.0"
hex = "0.4.3"
hmac-sha256 = "1.0.0"
lazy_static = "1.4.0"
md5 = "0.7.0"
random-fast-rng = "0.1.1"
